Allow to cycle variants backwards with SHIFT + T, other fixes and misc stuff

--- a/src/css/ingame_hud/pinned_shapes.scss
+++ b/src/css/ingame_hud/pinned_shapes.scss
@@ -103,7 +103,7 @@
 
             & {
                 /* @load-async */
-                background: uiResource("icons/pin.png") center center / 95% no-repeat;
+                background: uiResource("icons/unpin_shape.png") center center / 80% no-repeat;
             }
         }
 
